tests/closure/closure.exp
Error ------------------------------------------------------------------------------------------------- Closure.js:20:14

Cannot call `takes_string` with `global_x` bound to `_` because number [1] is incompatible with string [2].
[incompatible-call]

   Closure.js:20:14
   20| takes_string(global_x); // error (can't distinguish between calls to global_f and global_g)
                    ^^^^^^^^

References:
   Closure.js:16:14
   16|   global_x = 42;
                    ^^ [1]
   Closure.js:7:26
    7| function takes_string(_: string) {}
                                ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- Closure.js:23:14

Cannot call `takes_string` with `global_x` bound to `_` because number [1] is incompatible with string [2].
[incompatible-call]

   Closure.js:23:14
   23| takes_string(global_x);
                    ^^^^^^^^

References:
   Closure.js:16:14
   16|   global_x = 42;
                    ^^ [1]
   Closure.js:7:26
    7| function takes_string(_: string) {}
                                ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- Closure.js:39:16

Cannot call `takes_string` with `local_x` bound to `_` because number [1] is incompatible with string [2].
[incompatible-call]

   Closure.js:39:16
   39|   takes_string(local_x); // error (can't distinguish between calls to local_f and local_g)
                      ^^^^^^^

References:
   Closure.js:35:15
   35|     local_x = 42;
                     ^^ [1]
   Closure.js:7:26
    7| function takes_string(_: string) {}
                                ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- Closure.js:42:16

Cannot call `takes_string` with `local_x` bound to `_` because number [1] is incompatible with string [2].
[incompatible-call]

   Closure.js:42:16
   42|   takes_string(local_x); // error
                      ^^^^^^^

References:
   Closure.js:35:15
   35|     local_x = 42;
                     ^^ [1]
   Closure.js:7:26
    7| function takes_string(_: string) {}
                                ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- Closure.js:60:14

Cannot call `takes_string` with `global_y` bound to `_` because number [1] is incompatible with string [2].
[incompatible-call]

   Closure.js:60:14
   60| takes_string(global_y); // error (can't distinguish between calls to global_o.f and global_o.g)
                    ^^^^^^^^

References:
   Closure.js:55:16
   55|     global_y = 42;
                      ^^ [1]
   Closure.js:7:26
    7| function takes_string(_: string) {}
                                ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- Closure.js:63:14

Cannot call `takes_string` with `global_y` bound to `_` because number [1] is incompatible with string [2].
[incompatible-call]

   Closure.js:63:14
   63| takes_string(global_y); // error
                    ^^^^^^^^

References:
   Closure.js:55:16
   55|     global_y = 42;
                      ^^ [1]
   Closure.js:7:26
    7| function takes_string(_: string) {}
                                ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- Closure.js:81:16

Cannot call `takes_string` with `local_y` bound to `_` because number [1] is incompatible with string [2].
[incompatible-call]

   Closure.js:81:16
   81|   takes_string(local_y); // error (can't distinguish between calls to local_o.f and local_o.g)
                      ^^^^^^^

References:
   Closure.js:76:17
   76|       local_y = 42;
                       ^^ [1]
   Closure.js:7:26
    7| function takes_string(_: string) {}
                                ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- Closure.js:84:16

Cannot call `takes_string` with `local_y` bound to `_` because number [1] is incompatible with string [2].
[incompatible-call]

   Closure.js:84:16
   84|   takes_string(local_y); // error
                      ^^^^^^^

References:
   Closure.js:76:17
   76|       local_y = 42;
                       ^^ [1]
   Closure.js:7:26
    7| function takes_string(_: string) {}
                                ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- Closure.js:95:4

Cannot cast `x` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   Closure.js:95:4
   95|   (x: string); // blame
          ^

References:
   Closure.js:91:9
   91|     x = 10;
               ^^ [1]
   Closure.js:95:7
   95|   (x: string); // blame
             ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- Closure.js:105:6

Cannot cast `x` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   Closure.js:105:6
   105|     (x: string); // blame
             ^

References:
   Closure.js:100:9
   100|     x = 10;
                ^^ [1]
   Closure.js:105:9
   105|     (x: string); // blame
                ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- cond_havoc.js:12:10

Cannot return `x` because string [1] is incompatible with number [2]. [incompatible-return]

   cond_havoc.js:12:10
   12|   return x; // error, string ~/~> number (return type anno) TODO
                ^

References:
   cond_havoc.js:8:22
    8|   function f() { x = "" }
                            ^^ [1]
   cond_havoc.js:6:28
    6| function example(b: bool): number {
                                  ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- const.js:20:38

Cannot assign `var_x` to `y` because null or undefined [1] is incompatible with number [2]. [incompatible-type]

   const.js:20:38
   20|     call_me = () => { var y:number = var_x; };  // error
                                            ^^^^^

References:
   const.js:9:15
    9| function g(x: ?number) {
                     ^^^^^^^ [1]
   const.js:20:29
   20|     call_me = () => { var y:number = var_x; };  // error
                                   ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- const.js:20:38

Cannot assign `var_x` to `y` because null [1] is incompatible with number [2]. [incompatible-type]

   const.js:20:38
   20|     call_me = () => { var y:number = var_x; };  // error
                                            ^^^^^

References:
   const.js:22:11
   22|   var_x = null;
                 ^^^^ [1]
   const.js:20:29
   20|     call_me = () => { var y:number = var_x; };  // error
                                   ^^^^^^ [2]



Found 13 errors
